# easyloggingpp

./: .easylogging++.h.swp  .gitignore  .travis.yml  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CHANGE_LOG.md  CMakeLists.txt  CONTRIBUTORS.md  CTestTestfile.cmake  DEVELOPERS.md  LICENCE  LICENCE.md  LICENCE.txt  LICENSE  MESSAGE.md  README.md  VERSION_HISTORY.md  copy-across.sh  copy_to_samples.sh  easylogging++-full.h  easylogging++.cc  easylogging++.h  easyloggingpp.pri  index.html  index.php  release.sh  update.sh
.github/: FUNDING.yml
.github/workflows/: run-tests.yml
Documentation/: Doxyfile
articles/: Logging in your C++ Applications using EasyLogging++  Tracking Time Taken in your C++ Application
cmake/: FindEASYLOGGINGPP.cmake  FindEasyloggingpp.cmake  easyloggingpp.pc.cmakein
doc/: RELEASE-NOTES-v9.00  RELEASE-NOTES-v9.01  RELEASE-NOTES-v9.09  RELEASE-NOTES-v9.11  RELEASE-NOTES-v9.12  RELEASE-NOTES-v9.13  RELEASE-NOTES-v9.14  RELEASE-NOTES-v9.15  RELEASE-NOTES-v9.16  RELEASE-NOTES-v9.17  RELEASE-NOTES-v9.18  RELEASE-NOTES-v9.19  RELEASE-NOTES-v9.20  RELEASE-NOTES-v9.21  RELEASE-NOTES-v9.23  RELEASE-NOTES-v9.24  RELEASE-NOTES-v9.25  RELEASE-NOTES-v9.26  RELEASE-NOTES-v9.28  RELEASE-NOTES-v9.30  RELEASE-NOTES-v9.36  RELEASE-NOTES-v9.40  RELEASE-NOTES-v9.42  RELEASE-NOTES-v9.43  RELEASE-NOTES-v9.45  RELEASE-NOTES-v9.56  RELEASE-NOTES-v9.59  RELEASE-NOTES-v9.60  RELEASE-NOTES-v9.61  RELEASE-NOTES-v9.63  RELEASE-NOTES-v9.64  RELEASE-NOTES-v9.65  RELEASE-NOTES-v9.66  RELEASE-NOTES-v9.67  RELEASE-NOTES-v9.68  RELEASE-NOTES-v9.69  RELEASE-NOTES-v9.70  RELEASE-NOTES-v9.71  RELEASE-NOTES-v9.72  RELEASE-NOTES-v9.74  (+18 more)
experimental/: README.md  container-logs.h  easylogging++.h  main.cc  normal-logs.h  run.sh  vehicle.h
experimental/async/: .gitignore  async-logging.h  build.sh
experimental/issue-54/: easylogging++.h  main.cpp  run.sh
experimental/issue-62/: easylogging++.h  fastmap.h  hashmap.h  main.cc  run.sh
experimental/php-wrapper/: README.md  log-test.php
homepage/: README.md  index.php
homepage/syntax_highlighter/: cppToHtmlSyntaxHighlighter.php
next-release/: CHANGE_LOG.md  README.md  easylogging++.h
samples/: .gitignore  all-logs.cpp  all-logs.h  build_all.sh  compile.sh  conditional_logs.cpp  console.conf  container_log.cpp  custom_class.cpp  default-logger.conf  easylogging++.h  every_n_log.cpp  every_n_log_2.cpp  file.conf  global.conf  helper_functions.cpp  many_logs.cpp  multithread_test.cpp  pair_log.cpp  pthread_example.cpp  qa_logs.cpp  speed_test.cpp  summary_memory_release.cpp  test  test.cpp  time_tracker.cpp  time_waster.cpp  valgrind_happy.cpp  verbose_logs.cpp  very_basic.cpp
samples/API/: compile.sh  logbuilder.cpp
samples/Dev-C++/: main.cpp
samples/MinGW/: compile.bat  prog.cpp
samples/OpenGL/: compile.sh  hello_world.cpp
samples/STL/: all-logs.cpp  autospace.cpp  build_all.sh  check-macros.cpp  compile.sh  conditional.cpp  configurations.cpp  configurator.cpp  containers.cpp  crash.cpp  custom-class.cpp  custom-crash-handler.cpp  custom-format-spec-with-context.cpp  custom-format-spec.cpp  custom-performance-output.cpp  custom_class.cpp  default-configurations.cpp  default-log-file-from-arg.cpp  del-logger.cpp  easylogging++.h  flags.cpp  global-configuration.cpp  helper_functions.cpp  helpers.cpp  interval.cpp  locale.cpp  log-dispatch-callback.cpp  log.conf  loggable.cpp  logger-log-functions.cpp  logger-log-functions.cpp.archive  logrotate-pthread.cpp  logrotate.conf  logrotate.cpp  make-loggable.cpp  manipulators.cpp  multi-loggers-to-same-file.cpp  multiple-loggers.cpp  new-logger-registration-callback.cpp  no-default-log-file.cpp  (+20 more)
samples/async/: build.sh  prog.cpp
samples/boost/: build.sh  compile.sh  map.cpp  vector.cpp
samples/building-blocks/: README.md  building-blocks.pro  easylogging++.h
samples/fast-dictionary/: Makefile  easylogging++.h  fast-dictionary.pro  listwithsearch.cc  listwithsearch.hh  main.cc  mainwindow.cc  mainwindow.ui  multithread_test.cpp
samples/gtkmm/: compile.sh  sigc++.cpp  ustring.cpp
samples/logrotate/: Makefile  main.cpp
samples/multiple-files-project/: build.sh  main.cpp  vehicle.cpp  vehicle.h
samples/qt-sample/: Makefile  main.cpp  mythread.h  qt-sample.pro
samples/samples-full/: build_all.sh  compile.sh  conditional_logs.cpp  every_n_log.cpp  every_n_log_2.cpp  helper_functions.cpp  many_logs.cpp  multithread_test.cpp  pthread_example.cpp  qa_logs.cpp  speed_test.cpp  summary_memory_release.cpp  time_tracker.cpp  time_waster.cpp  valgrind_happy.cpp  verbose_logs.cpp  very_basic.cpp
samples/samples-linked/: compile.sh  conditional_logs.cpp  every_n_log.cpp  every_n_log_2.cpp  helper_functions.cpp  many_logs.cpp  multithread_test.cpp  pthread_example.cpp  qa_logs.cpp  speed_test.cpp  summary_memory_release.cpp  time_tracker.cpp  time_waster.cpp  valgrind_happy.cpp  verbose_logs.cpp  very_basic.cpp
samples/send-to-network/: README.md  compile.sh  network-logger.cpp
samples/wxWidgets/: a.out  basic.cpp  build-all.sh  compile.sh  (+3 more)
src/: .easylogging++.h.swp  easylogging++.cc  easylogging++.h
test/: .travis_build.sh  all-logs.h  basic_tests.cpp  basic_tests.h  build_and_run.sh  command-line-args-test.h  configurations-test.h  configurations_unittest.h  custom-format-specifier-test.h  easylogging++.h  enum-helper-test.h  enum-helper-tests.h  file-utils-test.h  format-specifier-test.h  global-configurations-test.h  helpers-test.h  hit-counter-test.h  issues-test.h  legacy-logs.h  log-format-resolution-test.h  loggable-test.h  logger-test.h  loggers-test.h  loggers_unittest.h  macros-test.h  main.cc  main.cpp  os-utils-test.h  plog-test.h  post-log-dispatch-handler-test.h  qt-gtest-proj-intel.pro  qt-gtest-proj.pro  registry-test.h  run_unit_tests.sh  runtime-vmodule-config-change-test.h  start_test.sh  strict-file-size-check-test.h  string-utils-test.h  syslog-test.h  test-helpers.h  (+12 more)
tools/: cpplint.py  images  release-ready-test.sh  release.sh  update-easylogging++.sh
update_script_rewrite/: README.md  easylogging++_old.h  test.sh  test_result.txt  update_rewrite.sh
(+216 files in other folders)
